# Crack-the-neural-code-of-the-brain

./: Process.ipynb  README.md  core.py  pyproject.toml
utils/: TSFEL_extraction.py  TSFRESH_extraction.py  featuretools_applied.py
utils/.ipynb_checkpoints/: featuretools_applied-checkpoint.py  load_data-checkpoint.py
