[tool.poetry]
name = "crackneuralcode"
version = "0.1.0"
description = ""
authors = ["qgeindreau"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
jupyterlab = "^3.4.8"
featuretools = "^1.15.0"
scikit-learn = "<1.1.2"
Boruta = "^0.3"
autofeat = "^2.0.10"
scipy = "1.8.1"
plotly = "^5.10.0"
statsmodels = "^0.13.2"
protobuf = "3.19.0"
FLAML = "^1.0.13"
featurewiz = "^0.2.1"
pandasgui = "^0.2.13"
autoviz = "^0.1.58"
BorutaShap = "^1.0.16"
ipywidgets = "6.0.0"
jupyterlab-widgets = "^3.0.3"
optuna = "^3.0.3"
ray = "<2"
sktime = "^0.13.4"
lightgbm = "^3.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
